tests/idris2/linear/linear006/expected
1/1: Building ZFun (ZFun.idr)
Error: While processing right hand side of bar. Main.test is not accessible in this context.

ZFun:13:7--13:11
 09 | 0 baz : Nat
 10 | baz = test foo -- fine!
 11 |
 12 | bar : Nat
 13 | bar = test foo -- bad!
            ^^^^

Main> [tc] Main> 10
[tc] Main> Bye for now!
